# spectral-bridges-parallel

./: .gitignore  CMakeLists.txt  CMakePresets.json  PARITY_REPORT.md  evaluator_kmeans.py  evaluator_spectral_bridges.py  fourway.py  kmeans_cpu_gpu_kmeans_test.py  kmeans_diags.py  main.cpp  mem_analysis.py  mnist_test.py  optuna_sklearn_sc.db  optuna_sklearn_sc.py  plotter.py  run_cuda_test.sh  runner.sh  sb_impl_tester.ipynb  search.py  spectral_bridges_documentation.docx  sweep_voronoi.py  test_suit_speedups.py  test_suit_speedups_cpu.py  vcpkg.json
finalized_datas/: combiner_plot_generate.ipynb  profile_m_2000.nsys-rep  profile_m_250.nsys-rep  profile_n_10000.nsys-rep  profile_n_100000.nsys-rep  profile_n_10000000.nsys-rep  results_h_sweep_cpu.csv  results_m_scaling.csv  results_m_scaling_cpu.csv  results_n_scaling.csv  results_n_scaling_cpu.csv  time_m_2000.txt  time_m_250.txt  time_m_8000.txt  time_n_10000.txt  time_n_100000.txt  time_n_10000000.txt
include/: affinity.hpp  affinity_gpu.hpp  kmeans.hpp  kmeans_cuda.hpp  spectral.hpp  spectral_cuda.hpp
logs_gpu/: cuda_test.err  cuda_test.out
python/: bindings.cpp
src/: affinity.cpp  affinity.cu  kmeans.cpp  kmeans_cuda.cu  spectral.cpp  spectral.cu
tests/: generate_reference.py  test_kmeans.cpp  test_kmeans_cuda.cpp  test_reference.cpp
tests/data/: blobs_true.csv  circles_X.csv  large_X.csv  large_metrics.txt  moons_X.csv
tests/data_bak/: blobs_X.csv  blobs_labels.csv  circles_labels.csv  large_labels.csv  large_true.csv
